--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
 			<button onclick="calcularMedia()">Calcular</button>
             <div class="card">
                 <div class="line"><span>Se a sua média for abaixo de 10,  vá para Krasnodar!</span> <span id="forca_resultado"></span></div>
-                <div class="line"><span>Se a sua média for abaixo de 30,  vá para Gear!</span> <span id="vigor_resultado"></span></div>
+                <div class="line"><span>Se a sua média for abaixo de 30,  vá para nossa academia!</span> <span id="vigor_resultado"></span></div>
                 <div class="line"><span>Se a sua média for entre 50 a 60, você está no caminho certo!</span> <span id="cerebro_resultado"></span></div>
                 <div class="line"><span>Se a sua média for entre 61 a 70, você está bom!</span> <span id="intuicao_resultado"></span></div>
                 <div class="line"><span>Se a sua média for acima de 85,   você está forte!</span> <span id="nivel_resultado"></span></div>
-                <div class="line"><span>Se a sua média for acima de 100,  parabéns, você ficou forte o suficiente para jogar na Velha Guarda!</span> <span id="media_resultado"></span></div>
+                <div class="line"><span>Se a sua média for acima de 100,  parabéns, você ficou forte o suficiente para jogar no Gear!</span> <span id="media_resultado"></span></div>
               </div>
 			<div class="result" id="resultado"></div>
             
